created title component and fixed positioning on top of canvas

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,5 +1,7 @@
 {
-    "NavHome": "Home",
-    "NavRésumé": "Résumé",
-    "NavPortfolio": "Portfolio"
+    "navHome": "Home",
+    "navRésumé": "Résumé",
+    "navPortfolio": "Portfolio",
+
+    "welcomeTitle": "Hello, my name's"
 }
