--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -5,5 +5,7 @@
 
     "welcomeNameTitle": "Hello, my name's",
     "welcomeJobTitleStart": "I am a",
-    "welcomeJobTitleEnd": "web developer"
+    "welcomeJobTitleEnd": "web developer",
+
+    "copyright": "Copyright © 2023 Florian Douay. All rights reserved."
 }
