added contact me button

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -3,6 +3,8 @@
     "navRésumé": "Résumé",
     "navPortfolio": "Portfolio",
 
+    "contactMe": "Contact me!",
+
     "welcomeNameTitle": "Hello, my name's",
     "welcomeJobTitleStart": "I am a",
     "welcomeJobTitleEnd": "web developer",
