--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -3,6 +3,8 @@
     "navRésumé": "CV",
     "navPortfolio": "Portfolio",
 
+    "contactMe": "Contactez moi!",
+
     "welcomeNameTitle": "Bonjour, je m'appelle",
     "welcomeJobTitleStart": "Je suis un développeur web",
     "welcomeJobTitleEnd": "",
