added entries to locales

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,10 @@
 {
+    "myName": " Florian Douay",
+
+    "frontend": "Front-end",
+    "fullstack": "Fullstack",
+    "backend": "Back-end",
+
     "navHome": "Home",
     "navRésumé": "Résumé",
     "navPortfolio": "Portfolio",
